Fix CloudFoundry tests for java 11 (#1882)